--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "getnum.h": "c"
     }
 }
