--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdio.h": "c",
         "getnum.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "complexadt.h": "c"
     }
 }
