--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "stdio.h": "c",
         "getnum.h": "c",
         "assert.h": "c",
-        "complexadt.h": "c"
+        "complexadt.h": "c",
+        "stdlib.h": "c"
     }
 }
