--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "complexadt.h": "c",
         "stdlib.h": "c",
         "vecadt.h": "c",
-        "collectionadt.h": "c"
+        "collectionadt.h": "c",
+        "random": "c"
     },
 
     "editor.quickSuggestions": {
